objects/BIGTEST_CustomObject_298__c.object
<CustomObject>
    <fields>
        <fullName>BIGTEST_CustomField_0__c</fullName>
        <label>BIGTEST_CustomField_0</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BIGTEST_CustomField_10__c</fullName>
        <label>BIGTEST_CustomField_10</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BIGTEST_CustomField_11__c</fullName>
        <label>BIGTEST_CustomField_11</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>BIGTEST_CustomObject_298</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BIGTEST_CustomObject_298</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>